--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+	"deploy": "gatsby-plugin-s3 deploy"
   },
   "dependencies": {
     "gatsby": "^5.5.0",
