--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-	"deploy": "gatsby-plugin-s3 deploy"
+    "deploy": "gatsby-plugin-s3 deploy"
   },
   "dependencies": {
     "gatsby": "^5.5.0",
+    "gatsby-plugin-s3": "^0.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
