--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "gatsby-plugin-s3 deploy"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "gatsby": "^5.5.0",
     "gatsby-plugin-s3": "^0.3.8",
     "react": "^18.2.0",
